Prevent page jumping when season posters load

--- a/sass/videolibrary/_tvshows.scss
+++ b/sass/videolibrary/_tvshows.scss
@@ -26,6 +26,8 @@
 		position: relative;
 		display: inline-block;
 		height: 250px;
+		width: 175px;
+		overflow: hidden;
 
 		img {
 			height: 100%;
